--- a/.gitignore
+++ b/.gitignore
@@ -37,3 +37,5 @@ src/install/snap20????/prime
 src/install/snap20????/parts
 src/install/snap20????/stage
 src/install/snap20????/*.snap
+src/distrib/meshlab.app
+src/install/macx/MeshLabBundle/meshlab.app
